--- a/html_03_uri_erp/main.css
+++ b/html_03_uri_erp/main.css
@@ -23,7 +23,7 @@ header {
 }
 
 nav {
-  background-color: black;
+  background-color: rgb(94, 94, 94);
   color: white;
   display: flex;
 }
@@ -63,7 +63,6 @@ article {
   flex: 1;
   margin: 5px;
   border: 1px solid green;
-  height: 500px;
 }
 
 /* class 가 dash-title 인 p tag */
