--- a/project/메인화면.css
+++ b/project/메인화면.css
@@ -4,32 +4,102 @@
   padding: 0;
 }
 
+html {
+  height: 100vh;
+  width: 100vw;
+}
+
 body {
-  background-color: lightskyblue;
+  height: 90%;
+  width: 100%;
+  background-color: rgb(208, 233, 248);
+}
+
+div#all {
+  display: flex;
+}
+
+#black {
+  background-color: black;
+  width: 105px;
+  height: 300px;
+  border-radius: 20px;
+  box-sizing: border-box;
+  margin-top: 5px;
+  margin-left: 5px;
+  padding-left: 10px;
+  padding-top: 15px;
+}
+
+#red {
+  background-color: red;
+  width: 80px;
+  height: 80px;
+  border-radius: 40px;
+}
+
+#yellow {
+  background-color: yellow;
+  width: 80px;
+  height: 80px;
+  border-radius: 40px;
+  margin-top: 15px;
+}
+
+#green {
+  background-color: green;
+  width: 80px;
+  height: 80px;
+  border-radius: 40px;
+  margin-top: 15px;
 }
 
 a {
   text-decoration: none;
   color: inherit;
+  display: block;
+  padding-bottom: 25px;
 }
 
 div#full {
   background-color: burlywood;
-  margin: 70px 50px 0 50px;
-  height: 700px;
+  margin: 70px 50px -70px 200px;
+  height: 600px;
+  width: 1300px;
   border-radius: 20px;
+  border: 1px solid rgba(128, 31, 173, 0.7);
 }
 
 div#top {
-  margin-top: 70px;
-  height: 300px;
-  /* border: 1px solid red; */
+  background-color: rgb(139, 243, 139);
+  border-radius: 20px;
+  height: 350px;
+}
+
+div#title_top {
+  display: flex;
+  height: 70px;
+}
+
+div h1:nth-of-type(2) {
+  margin-left: auto;
+  margin-right: 20px;
+}
+
+div h1:nth-of-type(3) {
+  margin-right: 45px;
 }
 
 div h1 {
-  color: cornflowerblue;
+  color: green;
   padding-top: 10px;
   margin-left: 30px;
+}
+div h1 a {
+  transition: 0.5s;
+}
+div h1 a:hover {
+  border-bottom: 3px solid green;
 }
 
 section {
@@ -39,36 +109,44 @@ section {
 
 article {
   flex: 1;
-  margin-top: 30px;
-  margin: 40px 20px;
-  background-color: skyblue;
-  border: 1px solid black;
-  height: 250px;
-  color: dodgerblue;
+  margin: 20px 40px;
+  background-color: rgb(143, 203, 226);
+  height: 230px;
+  color: darkblue;
+  border: 2px solid rgb(45, 17, 168);
+  border-radius: 10px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
+}
+
+div.select {
+  border-radius: 10px;
+  transition: 0.5s;
+  height: 228px;
+}
+
+div.select:hover {
+  background-color: cornflowerblue;
 }
 
 article a {
-  transition: 0.7s;
+  font-size: 25px;
 }
 
-article a:hover {
-  border-bottom: 3px solid rgb(255, 230, 0);
-}
-
-article div {
-  margin-top: 90px;
+img {
+  margin-top: 10px;
 }
 
 div.line {
-  margin-top: 50px;
+  margin-top: 20px;
   border: 5px solid lightgray;
 }
 
-div#full-bottom {
-  margin-top: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: cneter;
+div#light {
+  background-color: yellow;
+  border-bottom-right-radius: 20px;
+  height: 20px;
+  width: 20px;
+  padding: 30px;
 }
 
 div#bottom {
