--- a/Team_Project/bus/css/index.css
+++ b/Team_Project/bus/css/index.css
@@ -13,6 +13,7 @@ body {
   height: 90%;
   width: 100%;
   background-color: rgb(208, 233, 248);
+  /* background-image: url("../etc/background.png"); */
 }
 
 div#all {
