--- a/Team_Project/bus/css/findIdPw.css
+++ b/Team_Project/bus/css/findIdPw.css
@@ -34,9 +34,19 @@ body {
   text-decoration: none;
 }
 
+.findTitle {
+  width: 380px;
+  height: 47px;
+  font-weight: 700;
+  font-size: 50px;
+  line-height: 47px;
+  color: #0068ff;
+  border: 1px;
+  /* font-family: "Dongle", sans-serif; */
+}
+
 .subTitle {
   margin-right: 100px;
-
   background-color: rgb(30, 144, 219);
   border-radius: 20px;
   font-size: 40px;
@@ -44,11 +54,11 @@ body {
   color: rgb(75, 75, 75);
 }
 
-.form {
+/* .form {
   width: 300px;
   font-family: "Dongle", sans-serif;
   font-size: 20px;
-}
+} */
 
 /*
   집가서 div 넣고 해보기 ㅇㅇ  
@@ -59,12 +69,16 @@ article.dept {
   padding: 8px;
 } */
 
+.form,
 .area,
 .gender {
   width: 300px;
+  background: #b9def3;
   font-family: "Dongle", sans-serif;
-  font-size: 20px;
+  font-size: 22px;
   text-align: center;
+  border: 1px solid #d2d2d2;
+  border-radius: 7px;
 }
 
 .find_button {
@@ -74,7 +88,7 @@ article.dept {
   width: 100px;
   height: 50px;
   border-radius: 20px;
-  background-color: greenyellow;
+  background-color: rgb(145, 216, 38);
   border: 1px solid #0068ff;
 }
 
@@ -85,24 +99,13 @@ article.dept {
 
 h1 a {
   display: block;
-  height: 90px;
+  height: 70px;
   color: rgb(36, 105, 233);
-  font-size: 80px;
+  font-size: 70px;
   /* font-family: "Dongle", sans-serif; */
   text-decoration: none;
 }
 
 h1 a:hover {
   border-bottom: 3px solid rgb(90, 147, 201);
-}
-
-.findTitle {
-  width: 380px;
-  height: 47px;
-  font-weight: 700;
-  font-size: 50px;
-  line-height: 47px;
-  color: #0068ff;
-  border: 1px;
-  /* font-family: "Dongle", sans-serif; */
 }
