--- a/Team_Project/bus/css/login.css
+++ b/Team_Project/bus/css/login.css
@@ -19,7 +19,7 @@ body {
 
 .wrapper {
   background-color: rgb(108, 190, 241);
-  width: 80%;
+  width: 700px;
   height: 90%;
   margin-top: 50px;
   display: flex;
@@ -30,6 +30,10 @@ body {
   border: 2px solid rgba(89, 153, 226, 0.7);
   border-radius: 10px;
   box-shadow: 3px 3px 3px rgba(86, 192, 206, 0.7);
+
+  position: absolute;
+  animation-name: login_box_top_down;
+  animation-duration: 1s;
 }
 
 h1 a {
@@ -68,7 +72,7 @@ a {
 }
 
 .form {
-  width: 380px;
+  width: 320px;
   height: 60px;
   background: #ffffff;
   border: 1px solid #d2d2d2;
@@ -81,8 +85,13 @@ a {
   font-family: "Dongle", sans-serif;
 }
 
+.form:focus {
+  width: 420px;
+  border: 2px solid greenyellow;
+}
+
 #auto_login {
-  width: 380px;
+  width: 320px;
   display: flex;
   justify-content: flex-start;
 }
@@ -100,7 +109,7 @@ div#auto_login span {
 }
 
 .login {
-  width: 380px;
+  width: 320px;
   height: 75px;
   background: rgb(46, 204, 113);
   border: 1px solid rgb(46, 204, 113);
@@ -117,6 +126,7 @@ div#auto_login span {
 
 .login:hover {
   cursor: pointer;
+  background-color: rgb(4, 251, 107);
 }
 
 .login_etc {
@@ -124,4 +134,15 @@ div#auto_login span {
   color: blue;
   font-weight: bold;
   font-family: "Dongle", sans-serif;
+}
+
+@keyframes login_box_top_down {
+  from {
+    top: -500px;
+    opacity: 0; /* 투명도 */
+  }
+  to {
+    top: 0%;
+    opacity: 1;
+  }
 }
