--- a/Team_Project/bus/css/findIdPw.css
+++ b/Team_Project/bus/css/findIdPw.css
@@ -88,8 +88,9 @@ article.dept {
   width: 100px;
   height: 50px;
   border-radius: 20px;
-  background-color: rgb(72, 232, 28);
+  background-color: white;
   border: 1px solid #0068ff;
+  color: #0068ff;
 }
 
 .find_button:hover {
