--- a/Team_Project/bus/css/join.css
+++ b/Team_Project/bus/css/join.css
@@ -1,5 +1,13 @@
 * {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
   background-color: rgb(108, 190, 241);
+}
+
+html {
+  height: 100vh;
+  width: 100vw;
 }
 
 body {
@@ -7,6 +15,7 @@ body {
   flex-direction: row;
   justify-content: center;
   height: 100%;
+  width: 100%;
 }
 
 .wrapper {
